# invicoctrlpy

./: .gitignore  pyproject.toml  requirements.txt  setup.py
src/invicoctrlpy/banco/: flujo_caja.ipynb  flujo_caja.py
src/invicoctrlpy/contabilidad/: __init__.py
src/invicoctrlpy/contabilidad/banco/: __init__.py  control_banco_siif.ipynb  control_banco_siif.py  sscc_vs_siif.py
src/invicoctrlpy/contabilidad/deuda_flotante/: __init__.py  control_deuda_flotante.py  control_deuda_flotante_fct.py
src/invicoctrlpy/contabilidad/pasivo/: control_pasivo_siif.ipynb  control_pasivo_siif.py
src/invicoctrlpy/gastos/: control_obras.ipynb  control_obras.py  sgf_vs_sscc.ipynb  sgf_vs_sscc.py
src/invicoctrlpy/gastos/control_debitos_bancarios/: control_debitos_bancarios.ipynb  control_debitos_bancarios.py
src/invicoctrlpy/gastos/control_escribanos/: control_escribanos.ipynb  control_escribanos.py
src/invicoctrlpy/gastos/control_haberes/: control_haberes.ipynb  control_haberes.py
src/invicoctrlpy/gastos/control_honorarios/: control_honorarios.ipynb  control_honorarios.py
src/invicoctrlpy/gastos/control_obras/: control_obras.ipynb  control_obras.py  listado_obras.py
src/invicoctrlpy/gastos/control_retenciones/: control_retenciones.ipynb  (+1 more)
src/invicoctrlpy/icaro/: icaro.ipynb  icaro.py  icaro_vs_siif.ipynb  icaro_vs_siif.py
src/invicoctrlpy/recursos/: __init__.py  control_recursos.ipynb  control_recursos.py
src/invicoctrlpy/remanente/: remanente.ipynb  remanente.py
src/invicoctrlpy/utils/: handle_path.py  hangling_files.py  hangling_path.py  import_dataframe.py
(+19 files in other folders)
